--- a/css/styles.css
+++ b/css/styles.css
@@ -186,16 +186,6 @@ select { /* 1 */
 }
 
 /**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
@@ -277,15 +267,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type=search] {
-  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
 }
 
 /**
@@ -293,7 +275,6 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
@@ -335,14 +316,21 @@ html, body {
   font-family: "InterRegular";
   letter-spacing: 2px;
   overflow-x: hidden;
+  background-color: #454545;
 }
 
 ul li {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
 
 .container {
@@ -388,14 +376,23 @@ a {
 }
 .nav__list .nav__link {
   color: #fff;
-  font-size: 20px;
+  font-size: 24px;
+}
+.nav__list .nav__link:hover {
+  color: gray;
 }
 
 .main {
   background-image: url("../../img/bg-main.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 h2.main__title {
@@ -403,6 +400,7 @@ h2.main__title {
   text-transform: uppercase;
   letter-spacing: 4px;
   color: #fff;
+  margin-bottom: 47px;
 }
 
 .main__subtitle {
@@ -412,6 +410,7 @@ h2.main__title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 20px;
 }
 .main__subtitle span {
   color: #FDDA4C;
@@ -420,13 +419,14 @@ h2.main__title {
   margin-right: 20px;
 }
 .main__subtitle p {
-  font-size: 24;
+  font-size: 24px;
   color: #fff;
 }
 
 .main__desc {
   color: #fff;
   margin-bottom: 70px;
+  font-size: 24px;
 }
 
 .btn {
@@ -435,8 +435,152 @@ h2.main__title {
           text-decoration: dashed;
   border-bottom: 2px solid #fff;
   padding: 0 45px 5px 0;
+  font-size: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 15%;
+  margin-bottom: 5%;
 }
 .btn::after {
-  background-image: url("../../img/arrow.png");
+  content: url("../../img/arrow.png");
   display: block;
+  margin-left: 60px;
+}
+.btn:hover {
+  color: rgb(235, 233, 233);
+}
+
+.main__adv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 24px;
+  color: #fff;
+  width: 60%;
+  background: radial-gradient(107.97% 1498.15% at 0% 11.87%, rgba(107, 183, 208, 0.64) 0%, rgba(107, 183, 208, 0.32) 100%);
+  border-radius: 25px;
+}
+
+.main__adv-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.main__adv-item::before {
+  content: url("../../img/check.png");
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.about {
+  min-height: 790px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title {
+  font-size: 40px;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 10%;
+}
+
+.mint {
+  color: #8AC4D0;
+}
+
+.about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about__logo {
+  position: relative;
+  margin-right: 10%;
+}
+
+.about__logo-pic {
+  z-index: 1000;
+  position: relative;
+}
+
+.about__logo-down {
+  position: absolute;
+  left: 7%;
+  top: 12%;
+  z-index: 10;
+}
+
+.about__desc {
+  font-size: 23px;
+  color: #fff;
+  background-color: #393838;
+  border-radius: 25px;
+  padding: 25px 30px;
+}
+
+.about__desc-item {
+  list-style: disc;
+}
+
+.services__number {
+  color: #FDDA4C;
+  font-size: 68px;
+  font-family: "InterBold";
+}
+
+.services__item {
+  font-size: 24px;
+}
+.services__item::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #8AC4D0;
+  margin-bottom: 22px;
+}
+
+.services__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+
+.services__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 60%;
+}
+
+.serv__item {
+  margin-bottom: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.serv__item::before {
+  content: url("../../img/circle.png");
+  width: 22px;
+  height: 22px;
+  margin-right: 15px;
 }
