--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -4,14 +4,21 @@ html, body {
     font-family: 'InterRegular';
     letter-spacing: 2px;
     overflow-x: hidden;
+    background-color: $bgray;
 }
 
 ul li {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 a {
     text-decoration: none;
+}
+
+h1, h2, h3, h4 , h5, h6 {
+    margin: 0;
 }
 
 .container {
