--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,9 +28,11 @@
             margin-right: 0;
         }
     }
-   
     .nav__link {
         color: #fff;
-        font-size: 20px;
+        font-size: 24px;
+        &:hover {
+            color: gray;
+        }
     }
 }
