--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -2,17 +2,21 @@
     background-image: url('../../img/bg-main.png');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 90vh;
+    display: flex;
+    align-items: center;
 }
 h2.main__title {
     font-size: 50px;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #fff;
+    margin-bottom: 47px;
 }
 .main__subtitle {
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
     span {
         color: $yellow;
         font-size: 32px;
@@ -20,13 +24,14 @@ h2.main__title {
         margin-right: 20px;
     }
     p {
-        font-size: 24;
+        font-size: 24px;
         color: #fff;
     }
 }
 .main__desc {
     color: #fff;
     margin-bottom: 70px;
+    font-size: 24px;
 }
 
 .btn {
@@ -34,8 +39,34 @@ h2.main__title {
     text-decoration: dashed;
     border-bottom: 2px solid #fff;
     padding: 0 45px 5px 0;
+    font-size: 24px;
+    display: flex;
+    width: 15%;
+    margin-bottom: 5%;
     &::after {
-        background-image: url('../../img/arrow.png');
+        content: url('../../img/arrow.png');
         display: block;
+        margin-left: 60px;
+    }
+    &:hover {
+        color: rgb(235, 233, 233);
+    }
+}
+.main__adv {
+    display: flex;
+    font-size: 24px;
+    color: #fff;
+    width: 60%;
+    background: radial-gradient(107.97% 1498.15% at 0% 11.87%, rgba(107, 183, 208, 0.64) 0%, rgba(107, 183, 208, 0.32) 100%);
+    border-radius: 25px;
+}
+.main__adv-item {
+    display: flex;
+    &::before {
+        content: url('../../img/check.png');
+        display: flex;
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
     }
 }
