--- a/scss/config/_mixin.scss
+++ b/scss/config/_mixin.scss
@@ -1,5 +1,5 @@
-@mixin title {
+@mixin title() {
     font-size: 40px;
-    color: #fff;
+    color: rgb(148, 45, 45);
     text-transform: uppercase;
 }
