--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -3,6 +3,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    margin-bottom: 10%;
 }
 .title {
     @include title;
@@ -35,6 +36,9 @@
     background-color: #393838;
     border-radius: 25px;
     padding: 25px 30px;
+}
+.about__desc-list {
+    padding: 24px 30px;
 }
 .about__desc-item {
     list-style: disc;
