--- a/scss/layout/_fonts.scss
+++ b/scss/layout/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'InterRegular';
-    src: url('../../fonts/Inter-Regular.woff') format('woff');
+    src: url('./../fonts/Inter-Regular.woff') format('woff');
     font-weight: 500;
     font-style: normal;
   }
 
   @font-face {
     font-family: 'InterItalic';
-    src: url('../../fonts/Inter-Italic.woff') format('woff');
+    src: url('./../fonts/Inter-Italic.woff') format('woff');
     font-weight: 300;
     font-style: normal;
   }
 
   @font-face {
     font-family: 'InterBold';
-    src: url('../../fonts/Inter-Bold.woff') format('woff');
+    src: url('./../fonts/Inter-Bold.woff') format('woff');
     font-weight: 900;
     font-style: normal;
   }
