--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -32,7 +32,7 @@
         color: #fff;
         font-size: 24px;
         &:hover {
-            color: gray;
+            color: $yellow;
         }
     }
 }
