--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -44,9 +44,14 @@ h2.main__title {
     width: 15%;
     margin-bottom: 5%;
     &::after {
-        content: url('./../img/arrow.png');
+        content: url('./../img/arrow-white.png');
         display: block;
         margin-left: 60px;
+        &:hover {
+            content: url('./../img/arrow-mint.png');
+            display: block;
+            margin-left: 60px;
+        }
     }
     &:hover {
         color: rgb(235, 233, 233);
