--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -47,14 +47,19 @@ h2.main__title {
         content: url('./../img/arrow-white.png');
         display: block;
         margin-left: 60px;
-        &:hover {
+        width: 24px;
+        height: 24px;
+    }
+    &:hover {
+        color: $mint;
+        border-bottom: 2px solid $mint;
+        &:after {
             content: url('./../img/arrow-mint.png');
             display: block;
             margin-left: 60px;
+            width: 24px;
+            height: 24px;
         }
-    }
-    &:hover {
-        color: rgb(235, 233, 233);
     }
 }
 .main__adv {
