--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,6 +31,7 @@
     .nav__link {
         color: #fff;
         font-size: 24px;
+        transition: 500ms;
         &:hover {
             color: $yellow;
         }
