--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -35,7 +35,13 @@
     color: #fff;
     background-color: #393838;
     border-radius: 25px;
-    padding: 25px 30px;
+    padding: 25px 35px;
+    &:hover {
+       & > .about__desc-list {
+            font-size: 24px;
+            transition: 300ms;
+    }
+}
 }
 .about__desc-list {
     padding: 24px 30px;
