--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -38,13 +38,13 @@
     padding: 25px 35px;
     &:hover {
        & > .about__desc-list {
-            font-size: 24px;
-            transition: 300ms;
+            transform: scale(1.05);
     }
 }
 }
 .about__desc-list {
     padding: 24px 30px;
+    transition: transform 300ms;
 }
 .about__desc-item {
     list-style: disc;
