--- a/scss/sections/_contacts.scss
+++ b/scss/sections/_contacts.scss
@@ -12,8 +12,8 @@
     &:hover{
         box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.0196802), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0282725), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.035), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.0417275), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0503198), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.07);
         transition: 500ms;
-        & > .contacts__head {
-            font-size: 24px;
+        & > a, div {
+            transform: scale(1.05);
         }
     }
 }
@@ -21,20 +21,26 @@
     width: max-content;
 }
 .contacts__head-position {
+    font-family: 'InterSemiBold';
     font-size: 23px;
     font-weight: 600;
     margin-bottom: 14px;
+    transition: transform 300ms;
 }
 .contacts__head-name {
     font-size: 23px;
     margin-bottom: 40px;
+    font-family: 'InterMedium';
+    transition: transform 300ms;
 }
 .contacts__phone {
     display: flex;
     justify-content: center;
+    font-family: 'InterMedium';
     font-size: 19px;
     margin-bottom: 30px;
     color: #000;
+    transition: transform 300ms;
     &:before{
         content: url('./../img/phone.png');
         display: block;
@@ -46,8 +52,10 @@
 .contacts__email {
     display: flex;
     justify-content: center;
+    font-family: 'InterMedium';
     font-size: 19px;
     color: #000;
+    transition: transform 300ms;
     &:before{
         content: url('./../img/mail.png');
         display: block;
@@ -57,6 +65,7 @@
     }
 }
 .contacts__ctv {
+    font-family: 'InterSemiBold';
     background-image: url('./../img/bg-contacts.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -68,9 +77,13 @@
     padding: 0 35px;
     text-align: center;
     border: 1px solid #888686;
-    transition: 1s;
+    p {
+        transition: transform 300ms;
+    }
     &:hover {
-        filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.0196802)) drop-shadow(0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0282725)) drop-shadow(0px 22.3363px 17.869px rgba(0, 0, 0, 0.035)) drop-shadow(0px 12.5216px 10.0172px rgba(0, 0, 0, 0.0417275)) drop-shadow(0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0503198)) drop-shadow(0px 2.76726px 2.21381px rgba(0, 0, 0, 0.07));
-        font-size: 25px;
+        filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.0196802)) drop-shadow(0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0282725)) drop-shadow(0px 22.3363px 17.869px rgba(0, 0, 0, 0.035)) drop-shadow(0px 12.5216px 10.0172px rgba(0, 0, 0, 0.0417275)) drop-shadow(0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0503198)) drop-shadow(0px 2.76726px 2.21381px rgba(0, 0, 0, 0.07)); 
+        & > p {
+            transform: scale(1.05);
+        }
     }
 }
