--- a/scss/config/_mixin.scss
+++ b/scss/config/_mixin.scss
@@ -3,3 +3,21 @@
     color: #fff;
     text-transform: uppercase;
 }
+
+@mixin phones {
+    @media screen and (max-width: $phones) {
+        @content;
+    }
+}
+
+@mixin tablets {
+    @media screen and (max-width: $tablets) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media screen and (max-width: $desktop) {
+        @content;
+    }
+}
