--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,6 +6,72 @@
     justify-content: space-between;
     color: #E7E4E4;
     padding: 3% 0 2%;
+    @include tablets {
+        flex-direction: column;
+     }
+    @include phones {
+        flex-direction: column;
+     }
+}
+.footer__logo {
+    display: block;
+    @include tablets {
+        display: none;
+     }
+}
+.footer__logo-desktop {
+    display: none;
+    @include tablets {
+        display: block;
+     }
+     @include phones {
+        margin-bottom: 15px;
+     }
+}
+.img__pic {
+    @include phones {
+        height: 55px;
+     }
+}
+.nav__footer {
+    display: flex;
+    @include phones {
+        display: flex;
+        flex-direction: column;
+     }
+     .nav__list-footer {
+        display: flex;
+        @include tablets {
+            flex-direction: column;
+         }
+        @include phones {
+            flex-direction: column;
+            margin-bottom: 28px;
+         }
+         .nav__item-footer {
+            margin-right: 50px;
+            &:last-child {
+                margin-right: 0;
+            }
+            @include tablets {
+                margin-bottom: 20px;
+             }
+            @include phones {
+                margin-bottom: 10px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+             }
+             .nav__link-smaller {
+                color: #fff;
+                font-size: 20px;
+                @include phones {
+                    font-size: 18px;
+                 }
+            }
+         }
+     }
+     
 }
 .footer__desc {
     display: flex;
@@ -18,6 +84,14 @@
     justify-content: space-between;
     border-bottom: 1px solid $mint;
     padding: 35px 0;
+    @include tablets {
+        align-items: flex-start;
+     }
+    @include phones {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px 0;
+     }
 }
 .footer__desc-down {
     display: flex;
@@ -25,19 +99,53 @@
     color: #E7E4E4;
     font-size: 16px;
     padding: 25px 0 0;
+    @include tablets {
+        flex-direction: column;
+        align-items: flex-start;
+     }
+    @include phones {
+        flex-direction: column;
+        align-items: flex-start;
+        font-size: 16px;
+     }
 }
-.nav__list-footer .nav__link-smaller {
-    font-size: 20px;
+.footer__desc-down-wrapper {
+    display: flex;
+    @include phones {
+        flex-direction: column;
+     }
 }
 .footer__email {
     font-size: 20px;
     color: #fff;
+    @include phones {
+        font-size: 18px;
+        margin-bottom: 15px;
+     }
+}
+.footer__title-org {
+    @include tablets {
+        font-size: 16px;
+        margin-bottom: 10px;
+     }
+    @include phones {
+        margin-bottom: 10px;
+     }
 }
 .footer__inn {
     margin: 0 50px;
+    @include tablets {
+        margin: 0 40px 0 0;
+     }
+    @include phones {
+        margin: 0;
+     }
 }
 .footer__design {
     color: #8D8686;
     font-size: 12px;
     margin-left: 50px;
+    @include phones {
+        margin: 10px 0;
+     }
 }
