'acco-and-burger'

--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -4,6 +4,31 @@ section.services {
 .title {
     margin-bottom: 5%;
 }
+.services__header::after {
+    @include phones {
+        content: '\002B';
+        color: #777;
+        margin-left: 5px;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        border-radius: 25px;
+        border: 2px solid $yellow;
+        color: $yellow;
+        font-size: 25px;
+    }
+}
+.active-acc:after {
+    @include phones {
+        content: "\2212";
+        width: 30px;
+        height: 30px;
+     
+        border-radius: 25px;
+        border: 2px solid $yellow;
+        color: $yellow;
+    }
+}
 .title-services {
     @include tablets {
        margin-bottom: 50px;
@@ -43,6 +68,9 @@ section.services {
         height: 2px;
         background-color: $mint;
         margin-bottom: 22px;
+        @include phones {
+            margin-bottom: 15px;
+         }
     }
     &:last-child {
         &:after {
@@ -76,6 +104,10 @@ section.services {
         justify-content: space-between;
         align-items: center;
         margin-bottom: 10px;
+
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 15% 74% 11%;
      }
 }
 .serv__item {
@@ -92,8 +124,11 @@ section.services {
 .serv__list {
     width: 50%;
     @include phones {
-        display: none;
         width: 100%;
+        padding: 0 18px;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
      }
 }
 .services__icon {
