--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,7 @@ $desktop: 1280px;
 @import './layout/_base';
 @import './layout/_header';
 @import './layout/_footer';
+@import './layout/_hamburger';
 
 
 // sections
