--- a/scss/layout/_hamburger.scss
+++ b/scss/layout/_hamburger.scss
@@ -53,7 +53,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 15px;
-    background-image: url('./../../img/bg-tablet.png');
+    background-image: url('./../img/bg-tablet.png');
     background-size: cover;
     background-repeat: no-repeat;
 	transform: translateX(-100%);
@@ -68,14 +68,14 @@
         color: #fff;
     }
     .contacts__phone::before {
-        content: url(./../../img/iconPhone.png);
+        content: url(./../img/iconPhone.png);
         display: block;
         width: 24px;
         height: 24px;
         margin-right: 15px;
     }
     .contacts__email::before {
-        content: url(./../../img/iconMail.png);
+        content: url(./../img/iconMail.png);
         display: block;
         width: 24px;
         height: 24px;
@@ -102,4 +102,10 @@
         color: #fff;
         font-size: 22px;
     }
+}
+.hiden {
+    display: none;
+}
+.show {
+    display: block;
 }
