--- a/scss/sections/_works.scss
+++ b/scss/sections/_works.scss
@@ -24,15 +24,15 @@ section.works {
     @include phones {
         display: flex;
      }
-    .works__item {
-        background-color: #F5F6F7;;
-        padding: 50px 35px;
-        margin-right: 45px;
-        margin-bottom: 45px;
-        border-radius: 15px;
-        display: flex;
-        flex-direction: column;
-    }
+    // .works__item {
+    //     background-color: #F5F6F7;;
+    //     padding: 50px 35px;
+    //     margin-right: 45px;
+    //     margin-bottom: 45px;
+    //     border-radius: 15px;
+    //     display: flex;
+    //     flex-direction: column;
+    // }
 }
 .works__img {
     margin-bottom: 30px;
@@ -42,6 +42,9 @@ section.works {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+}
+.works__order {
+    padding-left: 15px;
 }
 .works__order-title {
     color: #898181;
