--- a/scss/sections/_works.scss
+++ b/scss/sections/_works.scss
@@ -24,15 +24,23 @@ section.works {
     @include phones {
         display: flex;
      }
-    // .works__item {
-    //     background-color: #F5F6F7;;
-    //     padding: 50px 35px;
-    //     margin-right: 45px;
-    //     margin-bottom: 45px;
-    //     border-radius: 15px;
-    //     display: flex;
-    //     flex-direction: column;
-    // }
+    .works__item {
+        background-color: #F5F6F7;;
+        padding: 50px 35px;
+        margin-right: 45px;
+        margin-bottom: 45px;
+        border-radius: 15px;
+        display: none;
+        flex-direction: column;
+        @include tablets {
+            padding: 0;
+            margin: 0;
+         }
+        @include phones {
+            padding: 0;
+            margin: 0;
+         }
+    }
 }
 .works__img {
     margin-bottom: 30px;
@@ -69,3 +77,9 @@ section.works {
         border: 2px solid $yellow;
     }
 }
+
+.noContent {
+    color: #000 !important;
+    background-color: transparent !important;
+    pointer-events: none;
+  }
